# zk-doc-vault

./: .gitignore  readme.md
docs/: setup.md  tech-stack.md  workflow.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: globals.css  globals.css.d.ts  layout.tsx  page.tsx
frontend/src/app/vault-list/: page.tsx
frontend/src/components/: WalletButton.tsx  WalletProvider.tsx  document-list.tsx  feature-cards.tsx  hero-section.tsx  navbar.tsx  vault-sidebar.tsx
runbooks/deployment/: main.tx
scripts/: package.json  tsconfig.json
scripts/src/: config.ts  uploadFile.ts
vault_program/: .gitignore  Anchor.toml  package.json  tsconfig.json  txtx.yml
vault_program/programs/vault_program/: Cargo.toml
vault_program/programs/vault_program/src/: constants.rs  errors.rs  lib.rs
vault_program/programs/vault_program/src/instructions/: create_user_vault.rs  delete_document.rs  mod.rs  request_proof.rs  upload_document.rs
vault_program/programs/vault_program/src/state/: document.rs  mod.rs  vault.rs
vault_program/runbooks/: README.md
vault_program/runbooks/deployment/: main.tx  signers.localnet.tx
vault_program/tests/: helpers.ts  utils.ts  vault_program.ts
zk_program/: Cargo.toml  README.md  manifest.json  request.json
zk_program/src/: main.rs
